[package]
name = "leaktk-jf"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "A util/lib for writing JSON to disk as separate files"
documentation = "https://github.com/leaktk/jf"
homepage = "https://github.com/leaktk/jf"
repository = "https://github.com/leaktk/jf"
readme = "README.md"
exclude = [
    "examples/*",
]

[dependencies]
serde = "1.0"
serde_json = "1.0"
regex = "1.0"
